--- a/style.css
+++ b/style.css
@@ -1,2 +1,12 @@
 /*This is global stylesheet*/
 /*do not use !important !!!!!*/
+
+body{
+    margin: 200px 10vw 50px 10vw;
+}
+
+a:link{
+    color: black !important;
+
+
+}
