--- a/app/css/layout.css
+++ b/app/css/layout.css
@@ -1,28 +1,28 @@
+
 .thumbnail-container {
     display: flex;
+    flex-flow: row;
     flex-wrap: wrap;
-    height: 100%;
-
 }
 
 .thumbnail-container-game {
-    flex: 25%;
-    max-width: 25%;
+    max-width: calc(25% - 30px);
     margin-bottom: 10px;
+    min-height: 100%;
 }
 
 .thumbnail-container-event {
     flex: 50%;
-    max-width: 50%;
+    max-width: calc(50% - 30px);
     margin-bottom: 10px;
 }
-.thumbnail-container-event-title {
 
+.thumbnail-container-event-title {
     font-size: larger;
 }
 
 .thumbnail-container-image {
-    width: 80%;
+    max-width: 80%;
     margin-bottom: 20px;
 }
 
@@ -33,10 +33,10 @@
 
 
 .thumbnail-container-name {
-    text-align: left;
     position: absolute;
-    bottom: 15px;
-    left: 20px;
+    bottom: 10px;
+    left: 10px;
+    text-align: left;
     font-size: large;
 }
 
@@ -48,10 +48,10 @@
 .thumbnail-container-background {
     position: relative;
     border-radius: 10px;
-    padding: 20px;
-    height: 100%;
-    margin-right: 10px;
-    margin-left: 10px;
+    padding: 10px;
+    margin-right: 15px;
+    margin-left: 15px;
+
 }
 
 
@@ -106,19 +106,26 @@
 
 }
 
-.word-wrap {
-    word-wrap: break-word;
-}
-
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1170px) {
     .thumbnail-container-game {
         flex: 50%;
-        max-width: 50%;
+        max-width: 40%;
+        margin-left: 5%;
+        margin-right: 5%;
     }
 
     .thumbnail-container-event {
         flex: 100%;
         max-width: 100%;
+    }
+
+    .thumbnail-container-title {
+        font-size: x-large;
+    }
+
+
+    .thumbnail-container-name {
+        font-size: large;
     }
 }
 
@@ -127,4 +134,6 @@
         flex: 100%;
         max-width: 100%;
     }
+
 }
+
