--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 /*This is global stylesheet*/
 
 body{
+    font-family: "Roboto",sans-serif;
     margin: 200px 10vw 50px 10vw;
 }
 
 a:link{
     color: black !important;
 }
+
