--- a/app/css/header.css
+++ b/app/css/header.css
@@ -1,8 +1,6 @@
 .navbar{
     margin: 0;
     padding: 0;
-
-    font-family: "Roboto",sans-serif;
     position: fixed;
     left: 50%;
     transform: translatex(-50%);
@@ -23,7 +21,7 @@
 }
 
 .nav-item{
-    margin: 0px 20px 0px 20px;
+    margin: 0 20px 0 20px;
     font-size: 20px;
 
 }
