--- a/app/css/layout.css
+++ b/app/css/layout.css
@@ -1,20 +1,20 @@
 
 .thumbnail-container {
     display: flex;
-    flex-flow: row;
+
     flex-wrap: wrap;
 }
 
 .thumbnail-container-game {
     max-width: calc(25% - 30px);
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     min-height: 100%;
 }
 
 .thumbnail-container-event {
     flex: 50%;
     max-width: calc(50% - 30px);
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .thumbnail-container-event-title {
@@ -23,32 +23,33 @@
 
 .thumbnail-container-image {
     max-width: 80%;
-    margin-bottom: 20px;
+    margin-top: -10px;
+    margin-bottom: 30px;
 }
 
 .thumbnail-container-title {
-    font-weight: bold;
-    font-size: x-large;
+    font-weight: 900;
+    font-size: 1.8vw;
 }
 
 
 .thumbnail-container-name {
     position: absolute;
-    bottom: 10px;
-    left: 10px;
+    bottom: 20px;
+    left: 20px;
     text-align: left;
-    font-size: large;
+    font-size: 1.2vw;
 }
 
-.first {
-    font-weight: normal;
+.bold-max {
+    font-weight: 900;
 
 }
 
 .thumbnail-container-background {
     position: relative;
-    border-radius: 10px;
-    padding: 10px;
+    border-radius: 18px;
+    padding: 20px;
     margin-right: 15px;
     margin-left: 15px;
 
@@ -82,20 +83,21 @@
 
 .robot-image {
     margin-top: 5%;
-    margin-left: 25%;
+    margin-left: 27%;
     transform: rotate(15deg);
 }
 
 .bomb-image {
-    margin-left: 35%;
+    margin-left: 39%;
 }
 
 .cup-image {
-    margin-left: 42%;
+    margin-left: 44%;
+
 }
 
 .gamepad-image {
-    margin-left: 30%;
+    margin-left: 32%;
 }
 
 .date-image {
@@ -109,31 +111,38 @@
 @media screen and (max-width: 1170px) {
     .thumbnail-container-game {
         flex: 50%;
-        max-width: 40%;
-        margin-left: 5%;
-        margin-right: 5%;
+        max-width: calc(50% - 30px)
+
     }
 
     .thumbnail-container-event {
         flex: 100%;
-        max-width: 100%;
+        max-width: calc(100% - 30px)
     }
 
     .thumbnail-container-title {
-        font-size: x-large;
+        font-size: 2.8vw;
     }
 
 
     .thumbnail-container-name {
-        font-size: large;
+        font-size: 2.2vw;
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
     .thumbnail-container-game {
         flex: 100%;
         max-width: 100%;
     }
 
+    .thumbnail-container-title {
+        font-size: xx-large;
+    }
+
+    .thumbnail-container-name {
+
+        font-size: larger;
+    }
 }
 
