Zmenený game div na canvas, upravená responzivita canvasu. Pridaná animácia v home-layout.css na hover linku na hry.

--- a/app/css/home-layout.css
+++ b/app/css/home-layout.css
@@ -6,10 +6,14 @@
 }
 
 .thumbnail-container-game:hover {
-    transform: scaleX(1);
+
     box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.125);
     filter: saturate(120%);
     cursor: pointer;
+}
+
+.thumbnail-container-game:hover > .thumbnail-container-image {
+    transform: scale(1.25);
 }
 
 .thumbnail-container-game {
@@ -33,6 +37,7 @@
     max-width: 80%;
     margin-top: -10px;
     margin-bottom: 30px;
+    transition: 0.1s all;
 }
 
 .thumbnail-container-title {
