--- a/app/css/game-style.css
+++ b/app/css/game-style.css
@@ -54,8 +54,7 @@
 .game-container-canvas {
     border: 3px solid black;
     border-radius: 15px;
-    width: fit-content;
-    height: fit-content;
+    max-width: 100%;
 }
 
 .game-container-canvas-image {
