Pridaný combo box na reprezentáciu obtiažnosti do game.html Pridaná trieda pre combo box obtiažnosti a zmena na display:inline-flex

--- a/sremanak/css/game.css
+++ b/sremanak/css/game.css
@@ -5,3 +5,12 @@
 .game-container-canvas {
     border-color: #FFC5C5;
 }
+
+.piece-image {
+    stroke: none;
+}
+
+.game-container-settings-difficulty {
+    display: inline-flex;
+    transition: letter-spacing 1s;
+}
