Premiestnená hlavička do three-level-menu componentu. Nalinkované css s customHtml.

--- a/app/three-level-menu/three-level-menu.component.html
+++ b/app/three-level-menu/three-level-menu.component.html
@@ -1,4 +1,15 @@
+<link rel="stylesheet" href="./app/three-level-menu/css/three-level-menu.component.css">
+<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./app/css/header.css">
 
-<span>Lubosko je boh</span>
+<nav class="navigation-bar">
+
+    <ul class="navigation-bar-row">
+        <li class="item item-active"><a class="item-link" href="./index.html">Domov</a></li>
+        <li class="item"><a class="item-link" href="#"><span>O nás</span></a></li>
+        <li class="item"><a class="item-link" href="#">Hry</a></li>
+        <li class="item"><a class="item-link" href="#">Škola</a></li>
+    </ul>
+</nav>
 
 
