--- a/peluha/css/game.css
+++ b/peluha/css/game.css
@@ -61,6 +61,11 @@
     text-align: center;
 }
 
+.pony-out-container img{
+    height: auto !important;
+}
+
+
 .pony-container img{
     width: 100% !important;
     height: 100% !important;
