--- a/app/three-level-menu/three-level-menu.component.html
+++ b/app/three-level-menu/three-level-menu.component.html
@@ -1,32 +1,9 @@
+<link href="./app/css/header.css" rel="stylesheet">
+<link href="./app/three-level-menu/css/three-level-menu.component.css" rel="stylesheet">
+<link href="./style.css" rel="stylesheet">
 
-<link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
-<script crossorigin="anonymous"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script crossorigin="anonymous"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" ></script>
-<script crossorigin="anonymous"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="js/three-level-menu.component.js"></script>
-<link rel="stylesheet" href="./app/three-level-menu/css/three-level-menu.component.css">
-<link rel="stylesheet" href="./style.css">
-<link rel="stylesheet" href="./app/css/header.css">
 
 <nav class="navigation-bar">
-    <ul id="menu" class="dropdown navigation-bar-row ">
-        <li class="item item-active"><a class="item-link" href="./index.html">Domov</a></li>
-        <li class="item"><a class="item-link" href="#"><span>O nás</span></a></li>
-        <li class="item"><a class="item-link" href="#">Hry</a>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li class="dropdown-item "><a class="item-link" href="#">Hry</a></li>
-            </ul>
-        </li>
-        <li class="item"><a class="item-link" href="#">Škola</a></li>
+    <ul class="navigation-bar-row" id="menu">
     </ul>
-
 </nav>
-
-
