Pridaný inline-flex s prefixom pre prehliadač Firefox.

--- a/sremanak/css/game.css
+++ b/sremanak/css/game.css
@@ -12,5 +12,6 @@
 
 .game-container-settings-difficulty {
     display: inline-flex;
+    display: -moz-inline-box;
     transition: letter-spacing 1s;
 }
