--- a/sokol/css/game.css
+++ b/sokol/css/game.css
@@ -14,13 +14,13 @@
 
 }
 
-.game-container-canvas-image{
-    opacity:0;
+.game-container-canvas-image {
+    opacity: 0;
 }
 
 
 /*DROP DIV*/
-#game-drop-left-background{
+#game-drop-left-background {
     position: absolute;
     top: 0;
     left: 0;
@@ -28,7 +28,7 @@
     height: 100%;
 }
 
-#game-drop-banana{
+#game-drop-banana {
     position: absolute;
     top: 11.3%;
     left: 0;
@@ -36,7 +36,7 @@
     height: 88.8%;
 }
 
-#game-drop-tomatos{
+#game-drop-tomatos {
     position: absolute;
     top: 0;
     left: 14.4%;
@@ -44,7 +44,7 @@
     height: 14%;
 }
 
-#game-drop-main-background{
+#game-drop-main-background {
     position: absolute;
     top: 0;
     left: 20.1%;
@@ -52,7 +52,7 @@
     height: 100%;
 }
 
-#game-drop-blackberries{
+#game-drop-blackberries {
     position: absolute;
     top: 37.3%;
     left: 20.3%;
@@ -60,7 +60,7 @@
     height: 44.6%;
 }
 
-#game-drop-kiwi{
+#game-drop-kiwi {
     position: absolute;
     top: 80.1%;
     left: 29.1%;
@@ -68,7 +68,7 @@
     height: 20.4%;
 }
 
-#game-drop-table{
+#game-drop-table {
     position: absolute;
     top: 33.5%;
     left: 40.9%;
@@ -76,7 +76,7 @@
     height: 35.2%;
 }
 
-#game-drop-cabbage{
+#game-drop-cabbage {
     position: absolute;
     top: 69.3%;
     left: 51.2%;
@@ -84,7 +84,7 @@
     height: 31.2%;
 }
 
-#game-drop-pepper{
+#game-drop-pepper {
     position: absolute;
     top: 38.7%;
     left: 70.5%;
@@ -92,7 +92,7 @@
     height: 41.8%;
 }
 
-#game-drop-broccoli{
+#game-drop-broccoli {
     position: absolute;
     top: 0;
     left: 68.4%;
@@ -100,7 +100,7 @@
     height: 41.4%;
 }
 
-#game-drop-right-background{
+#game-drop-right-background {
     position: absolute;
     top: 0;
     left: 73%;
@@ -109,80 +109,77 @@
 }
 
 
-
-
-
-#game-image-left-background{
+#game-image-left-background {
     position: absolute;
     width: 100%;
     height: auto;
     z-index: 2;
 }
 
-#game-image-banana{
+#game-image-banana {
     position: absolute;
     width: 100%;
     height: auto;
     z-index: 3;
 }
 
-#game-image-tomatos{
+#game-image-tomatos {
     position: absolute;
     width: 100%;
     height: auto;
     z-index: 4;
 }
 
-#game-image-main-background{
+#game-image-main-background {
     position: absolute;
     width: 100%;
     height: auto;
     z-index: 1;
 }
 
-#game-image-blackberries{
+#game-image-blackberries {
     position: absolute;
     width: 100%;
     height: auto;
     z-index: 3;
 }
 
-#game-image-kiwi{
+#game-image-kiwi {
     position: absolute;
     width: 100%;
     height: auto;
     z-index: 4;
 }
 
-#game-image-table{
+#game-image-table {
     position: absolute;
     width: 100%;
     height: auto;
     z-index: 3;
 }
 
-#game-image-cabbage{
+#game-image-cabbage {
     position: absolute;
     width: 100%;
     height: auto;
     z-index: 3;
 }
 
-#game-image-pepper{
+#game-image-pepper {
     position: absolute;
     width: 100%;
     height: auto;
     z-index: 3;
 }
 
-#game-image-broccoli{
+#game-image-broccoli {
     position: absolute;
     width: 100%;
     height: auto;
     z-index: 3;
 }
 
-#game-image-right-background{
+#game-image-right-background {
     position: absolute;
     width: 100%;
     height: auto;
@@ -190,24 +187,24 @@
 }
 
 
-.end-game-modal-hidden{
-    display:none;
+.end-game-modal-hidden {
+    display: none;
     z-index: -1;
 }
 
-.end-game-modal{
-    display:flex;
+.end-game-modal {
+    display: flex;
     position: fixed;
     z-index: 1000;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0, 0, 0, 0.6);
     overflow: auto;
 }
 
-.end-game-text{
+.end-game-text {
     font-size: 20px;
     background-color: #D7FFC5;
     text-align: center;
