Pridaná trieda no-print do komponentu three-level-menu.component .

--- a/app/three-level-menu/three-level-menu.component.html
+++ b/app/three-level-menu/three-level-menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navigation-bar">
+<nav class="navigation-bar no-print">
     <ul class="navigation-bar-row" id="menu">
     </ul>
 </nav>
