--- a/app/css/home-layout.css
+++ b/app/css/home-layout.css
@@ -2,10 +2,10 @@
 .thumbnail-container {
     display: flex;
     flex-wrap: wrap;
-
 }
 
 .thumbnail-container-game {
+    flex: 25%;
     max-width: calc(25% - 30px);
     margin-bottom: 30px;
     min-height: 100%;
@@ -60,7 +60,6 @@
     padding: 20px;
     margin-right: 15px;
     margin-left: 15px;
-
 }
 
 .robot-image {
