FIX: vsetky mena pre dnesny den

--- a/app/nameDayFinder/css/nameDayFinder.component.css
+++ b/app/nameDayFinder/css/nameDayFinder.component.css
@@ -66,6 +66,10 @@ ul#country-chooser li:hover {
 
 #more-names-button {
     transition: all 0.5s;
+    border: 1px solid black;
+    padding: 3px;
+    border-radius: 10px;
+    margin-left: 5px;
 }
 
 .button-with-icon {
