--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
     position: relative;
     font-family: "Roboto", sans-serif;
-    margin: 200px 10vw 50px 10vw;
+    margin: 200px 10vw 50px 10vw !important;
 }
 
 a:link {
