--- a/app/css/header.css
+++ b/app/css/header.css
@@ -3,22 +3,23 @@
     margin: 0;
     padding: 10px;
     position: fixed;
-    left: 50%;
+    left: 50vw;
     transform: translatex(-50%);
     top: 20px;
-    width: 400px;
-    z-index: 1;
     border-radius: 20px;
     border: 3px solid black;
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(3px);
+    transition: opacity 0.2s;
+    width: 400px;
+    z-index: 1;
 }
+
 
 .navigation-bar-row {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: auto;
     display: flex;
     justify-content: space-between;
 }
