--- a/app/css/game-style.css
+++ b/app/css/game-style.css
@@ -1,5 +1,6 @@
 .game-container {
     display: flex;
+    display: -moz-flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-content: center;
@@ -11,7 +12,7 @@
     width: -moz-fit-content; /* Firefox*/
     width: fit-content; /* Chrome */
     text-align: left;
-    margin-top: -70px;
+    margin-top: -50px;
     margin-bottom: 10px;
 }
 
