--- a/app/css/home-layout.css
+++ b/app/css/home-layout.css
@@ -1,15 +1,16 @@
 
 .thumbnail-container {
     display: flex;
+    display: -moz-flex;
     flex-wrap: wrap;
 }
 
 .thumbnail-container-game {
-    flex: 25%;
+    flex: 0 1 25%;
     max-width: calc(25% - 30px);
     margin-bottom: 30px;
-    min-height: 100%;
     transition: 0.01s all;
+    min-height: fit-content;
 }
 
 .thumbnail-container-game:hover {
@@ -17,12 +18,14 @@
     box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.125);
     filter: saturate(120%);
     cursor: pointer;
+
 }
 
 .thumbnail-container-event {
-    flex: 50%;
     max-width: calc(50% - 30px);
     margin-bottom: 30px;
+    flex: 0 1 50%;
+
 }
 
 .thumbnail-container-event-title {
@@ -63,21 +66,24 @@
 }
 
 .robot-image {
-    margin-top: 5%;
+
     margin-left: 27%;
     transform: rotate(15deg);
 }
 
 .bomb-image {
+    margin-top: 5%;
     margin-left: 39%;
 }
 
 .cup-image {
+    margin-top: 5%;
     margin-left: 44%;
 
 }
 
 .gamepad-image {
+    margin-top: 5%;
     margin-left: 32%;
 }
 
@@ -86,7 +92,6 @@
 }
 
 .attendance-image {
-
 }
 
 @media screen and (max-width: 1170px) {
@@ -108,6 +113,10 @@
 
     .thumbnail-container-name {
         font-size: 2.2vw;
+    }
+    .robot-image {
+
+       margin-top: 5%;
     }
 }
 
