--- a/app/three-level-menu/css/three-level-menu.component.css
+++ b/app/three-level-menu/css/three-level-menu.component.css
@@ -7,14 +7,19 @@
     display: block;
 }
 
+.item:hover #menu {
+    border-color: red;
+}
+
 .navigation-bar-inner-row {
     display: none;
     position: absolute;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.85);
+    border-radius: 15px;
     z-index: 1;
     width: 88px;
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid rgba(30, 30, 30, 0.1);
     text-align: center;
     transform: translatex(-50%);
     left: 50%;
@@ -27,16 +32,32 @@
 }
 
 .navigation-bar-inner-row .item-link {
-    transition: all 0.2s ease-in;
+    transition: transform 0.2s ease-in;
     border-radius: 5px;
 }
 
 .navigation-bar-inner-row .item-link:hover {
     width: 100%;
     height: 100%;
-    transform: scale(1.1,1.1);
+    transform: scale(1.1, 1.1);
 }
 
+.item-link-home {
 
+}
 
+.item-link-home:hover {
 
+}
+
+.navigation-bar-inner-row > .item-root {
+
+}
+
+.item-child-right {
+    left: 6%;
+    transform: translateX(50%);
+    top: -80%;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+}
