--- a/app/contact/css/contact.css
+++ b/app/contact/css/contact.css
@@ -1,10 +1,17 @@
 .contact-content{
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 20px !important;
+    margin-right: 20px !important;
     margin-bottom: 30px;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0,0,0,0.05);
     min-width: 280px;
+}
+
+.contact-top{
+    position: absolute;
+    top: 20px !important;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .contact-img{
