--- a/app/contact/css/contact.css
+++ b/app/contact/css/contact.css
@@ -1,6 +1,6 @@
 .contact-content{
-    margin-left: 20px !important;
-    margin-right: 20px !important;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 30px;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0,0,0,0.05);
