--- a/app/checklist/css/checklist.css
+++ b/app/checklist/css/checklist.css
@@ -5,14 +5,14 @@
     margin-bottom: 50px;
     font-size: larger;
     min-width: 300px;
-    border-collapse:separate;
+    border-collapse: separate;
     border: 3px solid black;
     overflow: hidden;
     border-radius: 20px;
     -moz-border-radius: 20px;
 
 
-    box-shadow: 10px 10px 20px rgba(0,0,0,0.05);
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.05);
 }
 
 .content-table thead tr {
@@ -27,45 +27,44 @@
     text-align: center;
 }
 
-.center-checkmark{
+.center-checkmark {
     margin-left: auto;
     margin-right: auto;
 }
 
-.scrollable-table{
+.scrollable-table {
     margin-left: auto;
     margin-right: auto;
 }
 
 
-
-.color-tasks{
+.color-tasks {
     background-color: #EAEAEA;
 }
 
-.color-palencar{
+.color-palencar {
     background-color: #C5F5FF;
 }
 
-.color-peluha{
+.color-peluha {
     background-color: #FFF7B0;
 }
 
-.color-sremanak{
+.color-sremanak {
     background-color: #FFC5C5;
 }
 
-.color-sokol{
+.color-sokol {
     background-color: #D7FFC5;
 }
 
 
-.icon-size{
+.icon-size {
     width: 30px;
     height: 30px;
 }
 
-.a-link-color{
+.a-link-color {
     text-decoration: none;
     color: black;
 }
