--- a/peluha/css/modal.css
+++ b/peluha/css/modal.css
@@ -14,7 +14,8 @@
 
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto;
+    position: absolute;
+    top: 50vh;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
