--- a/peluha/css/modal.css
+++ b/peluha/css/modal.css
@@ -14,8 +14,7 @@
 
 .modal-content {
     background-color: #fefefe;
-    position: absolute;
-    top: 90vh;
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
@@ -34,4 +33,8 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+.top-modal{
+    top: 50vh;
 }
