--- a/app/shared/css/game-layout.css
+++ b/app/shared/css/game-layout.css
@@ -69,11 +69,11 @@
 .navigation-bar {
     position: absolute;
     left: 50%;
+    z-index: 5;
 }
 
 html {
     position: relative;
-!important;
 }
 
 body {
